k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wisecow
  namespace: wisecow

spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow

  template:
    metadata:
      labels:
        app: wisecow

    spec:
      containers:
      - name: wisecow
        image: soham444/wisecow:latest
        imagePullPolicy: IfNotPresent
        ports:

        - containerPort: 4499
