k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
  namespace: wisecow
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
  - port: 80
    targetPort: 4499
